# koechg2022.io

./: .gitignore  CMakeLists.txt  README.md  index.html
Client/css/: about.css  books.css  contact.css  github.css  hobbies.css  home.css  homepage.css  photography.css  styles.css  stylesheets.css  travel.css
Client/files/: artic melting sea.avif  dutch beach and fence.avif  multiple dutch windmills.avif  norway aerienne water plan.avif  people walking through the park.avif
Client/html/: __about__.html  __home__.html  about.html  books.html  contact.html  github.html  hobbies.html  home.html  home_page.html  homepage.html  index.html  photography.html  travel.html
Client/javascript/: index.js
Client/js/: homepage.js  index.js  management.js
Files to serve/: books.avif  camera.avif  coding background.avif  dutch bridge.avif  dutch windmill and sheep.avif  dutch windmill through yellow flowers.avif  dutch windmill with sky.avif  dutch windmill.avif  file_manager.py  green and purple grass.avif  green grass and calm clouds.avif  green grass during the day.avif  hot air balloons.avif  house in green fields.avif  image_names.txt  night sky reflected.avif  norway hamnoy village.avif  paddling.avif  red clouds.avif  relaxing rocks.avif
Server/: CMakeLists.txt  tests.c++
Server/.cache/clangd/index/: server_with_gui.c++.D5EC1ED5E9F6DBD4.idx  test_server.c++.7C3A36F65C87AF7B.idx  test_server_gui.c++.98546612F86C830F.idx
Server/files/: cert.pem  cert_old.pem  key.pem  key_old.pem
Server/headers/: include.h  included.h++
Server/libs/: misc_functions.c++  misc_functions.h++  networking.c++  networking.h++  networking_defs.c++  string_functions.c++  string_functions.h++  string_functions_defs.c++
Server/objects/: server_with_gui  test_server  test_server_gui  tests
Server/source/: server.c++  server_with_gui.c++  test_server.c++  test_server_gui.c++
Server/tests/: test_server.c++
css/: about.css  github.css  home.css  photography.css
files/: artic sky day.avif  backpacking.avif  boeing787 window.avif  contact me.avif  dutch windmill 2.avif  green fields on mountain base.avif  guitar.avif  norway oslo canal through city.avif  norway waterside panoamic scene.avif  norway white bridge above the river.avif  sea birds at beach.avif
html/: github.html  photography.html
include/: included
js/: homepage.js
libraries/: headers.h  include.h  network_headers.h  prototypes  prototypes.c++  structures.h  useful_functions.h
